--- a/api-service-prod.yml
+++ b/api-service-prod.yml
@@ -26,7 +26,7 @@ webclient:
   writeTimeOut: 100000
 
 download:
-  url: https://dev.rs-aiot.com
+  url: https://www.rs-aiot.com
   
 ext:
   sigfox:
