--- a/gateway-local.yml
+++ b/gateway-local.yml
@@ -1,6 +1,8 @@
 spring:
   application:
-    name: gateway-service
+    name: gateway
+  profiles:
+    active: ${profile:local}    
   sleuth:
     sampler:
       probability: 1.0
@@ -54,7 +56,7 @@ spring:
           predicates:
             - Path=/api/sap/**
         - id: common-auth
-          uri: https://dev-gate.rs-aiot.com
+          uri: https://dev.rs-aiot.com
           predicates:
             - Path=/api/auth/**,/api/v1/**
           filters:
